--- a/free_daily_chess_puzzles.html
+++ b/free_daily_chess_puzzles.html
@@ -63,8 +63,19 @@
 
 <iframe id="8910179" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=8910179"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8910179"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
 
+<br>  
+  
 
-</body>
+<br>
+  
+  
+  <h1>More chess puzzlees coming soon...</h1>
+  
+  
+  <h2>Please, if you can, do send ideas for chess puzzles.</h2>
+  
+
+  </body>
 
 
 </html>
