--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 
 <html>
@@ -8,6 +8,9 @@
 
 
 <head>
+  
+  
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 
 <meta charset="UTF-8">
