--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -72,7 +72,7 @@
 <br>
   
   
-  <h1>More chess puzzlees coming soon...</h1>
+  <h1>More chess puzzles coming soon...</h1>
   
   
   <h2>Please, if you can, do send ideas for chess puzzles.</h2>
