--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -35,6 +35,9 @@
 
 
 <body>
+  
+  
+  <div style="background-image url('fa000787fb051c057b2f5dab3d31c219.png');width:16000px;height:12120px;"></div>
 
 
 <button onclick="topFunction()" id="myBtn" title="⬆">Top</button>
