--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -34,10 +34,7 @@
 </head>
 
 
-<body>
-  
-  
-  <div style="background-image url('fa000787fb051c057b2f5dab3d31c219.png');width:16000px;height:12120px;"></div>
+<body style="background-image url('fa000787fb051c057b2f5dab3d31c219.png');width:16000px;height:12120px;">
 
 
 <button onclick="topFunction()" id="myBtn" title="⬆">Top</button>
