--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -28,6 +28,21 @@
   div {
     background-image: url('chess-34.jpg')
   }
+  
+  a:link, a:visited {
+    color: white;
+    text-decoration: bold;
+    background-color: green;
+    text-align: center;
+    padding: 14px 25px
+    display: inline block;
+    font-family: verdana;
+  }
+  
+  
+  a:hover, a:active {
+    background-color: powder-blue
+  }
 
 
 #myBtn { display: none; /* Hidden by default */ position: fixed; /* Fixed/sticky position */ bottom: 20px; /* Place the button at the bottom of the page */ right: 30px; /* Place the button 30px from the right */ z-index: 99; /* Make sure it does not overlap */ border: none; /* Remove borders */ outline: none; /* Remove outline */ background-color: red; /* Set a background color */ color: white; /* Text color */ cursor: pointer; /* Add a mouse pointer on hover */ padding: 15px; /* Some padding */ border-radius: 10px; /* Rounded corners */ font-size: 18px; /* Increase font size */ } #myBtn:hover { background-color: #555; /* Add a dark-grey background on hover */ }
@@ -57,19 +72,19 @@
 </script>
 
 
-<h1>Free daily chess puzzles! ♟</h1>
+<h1 style="color:white; font-family:verdana; tect-align:center;">Free daily chess puzzles! ♟</h1>
 
 
-<h2>No accounts are needed!</h2>
-
-
-<br>
+<h2 style="color:white; font-family:verdana; tect-align:center;">No accounts are needed!</h2>
 
 
 <br>
 
 
-<h1>Chess puzzle of the day!</h1>
+<br>
+
+
+<h1 style="color:white; font-family:verdana; tect-align:center;">Chess puzzle of the day!</h1>
 
 
 <iframe id="8910179" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=8910179"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8910179"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
@@ -80,10 +95,10 @@
 <br>
   
   
-  <h1>More chess puzzles coming soon...</h1>
+  <h1 style="color:white; font-family:verdana; tect-align:center;">More chess puzzles coming soon...</h1>
   
   
-  <h2>Please, if you can, do send ideas for chess puzzles.</h2>
+  <h2 style="color:white; font-family:verdana; tect-align:center;">Please, if you can, do send ideas for chess puzzles.</h2>
   
 
   </body>
