--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -25,9 +25,24 @@
 <style>
   
   
+  h1 {
+    color:white;
+    font-family:verdana;
+    tect-align:center;
+  }
+  
+  
+  h2 {
+    color:white;
+    font-family:verdana;
+    tect-align:center;
+  }
+  
+  
   div {
     background-image: url('chess-34.jpg')
   }
+  
   
   a:link, a:visited {
     color: white;
@@ -75,7 +90,7 @@
 <h1 style="color:white; font-family:verdana; tect-align:center;">Free daily chess puzzles! ♟</h1>
 
 
-<h2 style="color:white; font-family:verdana; tect-align:center;">No accounts are needed!</h2>
+<h2 tect-align:center;">No accounts are needed!</h2>
 
 
 <br>
@@ -95,10 +110,10 @@
 <br>
   
   
-  <h1 style="color:white; font-family:verdana; tect-align:center;">More chess puzzles coming soon...</h1>
+  <h1>More chess puzzles coming soon...</h1>
   
   
-  <h2 style="color:white; font-family:verdana; tect-align:center;">Please, if you can, do send ideas for chess puzzles.</h2>
+  <h2>Please, if you can, do send ideas for chess puzzles.</h2>
   
 
   </body>
