--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -28,14 +28,14 @@
   h1 {
     color:white;
     font-family:verdana;
-    tect-align:center;
+    text-align:center;
   }
   
   
   h2 {
     color:white;
     font-family:verdana;
-    tect-align:center;
+    text-align:center;
   }
   
   
