--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -87,19 +87,19 @@
 </script>
 
 
-<h1 style="color:white; font-family:verdana; tect-align:center;">Free daily chess puzzles! ♟</h1>
+<h1>Free daily chess puzzles! ♟</h1>
 
 
-<h2 tect-align:center;">No accounts are needed!</h2>
-
-
-<br>
+<h2>No accounts are needed!</h2>
 
 
 <br>
 
 
-<h1 style="color:white; font-family:verdana; tect-align:center;">Chess puzzle of the day!</h1>
+<br>
+
+
+<h1>Chess puzzle of the day!</h1>
 
 
 <iframe id="8910179" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=8910179"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8910179"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
