--- a/puzzle_archive.html
+++ b/puzzle_archive.html
@@ -65,10 +65,10 @@
 <br>
 
 
-<h1>Chess puzzle of the day!</h1>
+<h1>Chess Puzzle Archive</h1>
     
     
-    <h2>Yellow Yet Clear</h2>
+    <h2>Archive No. 1: Yellow Yet Clear</h2>
 
 
 <iframe id="8910179" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=8910179"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8910179"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
@@ -77,9 +77,6 @@
   
 
 <br>
-  
-  
-  <h1>More chess puzzles coming soon...</h1>
   
   
   <h2>Please, if you can, do send ideas for chess puzzles.</h2>
