--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -70,10 +70,11 @@
 <h1>Chess puzzle of the day!</h1>
     
     
-    <h2>Yellow Yet Clear</h2>
+    <h2>The Repition of River</h2>
 
 
-<iframe id="8910179" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=8910179"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8910179"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
+    <iframe id="8912991" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8912991"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8912991"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
+
 
 <br>  
   
