--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -40,14 +40,11 @@
 <body>
   
   
-  <!-- Load an icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="navbar">
-  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-  <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
-  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+  <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/">🏠 Home</a>
+  <a class="active" href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/daily_puzzle.html">♟ Daily Chess Puzzle</a>
+  <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html">📁 Archived Puzzles</a>
 </div>
 
 
