--- a/weekly_puzzle.html
+++ b/weekly_puzzle.html
@@ -35,3 +35,73 @@
 
 
 </head>
+
+
+<body>
+  
+  
+
+<div class="navbar">
+  <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/">🏠 Home</a>
+  <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/daily_puzzle.html">♟ Daily Chess Puzzle</a>
+  <a class="active" href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/weekly_puzzle.html">🕒 Weekly Chess Puzzle</a>
+  <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html">📁 Archived Puzzles</a>
+</div>
+
+
+
+  <div>
+  
+  
+<button onclick="topFunction()" id="myBtn" title="⬆">Top</button>
+
+
+<script>
+
+
+//Get the button: mybutton = document.getElementById("myBtn"); // When the user scrolls down 20px from the top of the document, show the button window.onscroll = function() {scrollFunction()}; function scrollFunction() { if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) { mybutton.style.display = "block"; } else { mybutton.style.display = "none"; } } // When the user clicks on the button, scroll to the top of the document function topFunction() { document.body.scrollTop = 0; // For Safari document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera }
+
+
+</script>
+
+
+<h1>Free daily chess puzzles! ♟</h1>
+
+
+<h2>No accounts are needed!</h2>
+
+
+<br>
+
+
+<br>
+
+
+<h1>Chess puzzle of the day!</h1>
+    
+    
+    <h2>The Repition of River</h2>
+
+
+    <iframe id="8912991" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8912991"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8912991"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
+
+
+<br>  
+  
+
+<br>
+  
+  
+  <h1>More chess puzzles coming soon...</h1>
+  
+  
+  <h2>Please, if you can, do send ideas for chess puzzles.</h2>
+  
+
+  </body>
+  
+  
+  </div>
+
+  
+  </html>
