--- a/weekly_puzzle.html
+++ b/weekly_puzzle.html
@@ -77,13 +77,13 @@
 <br>
 
 
-<h1>Chess puzzle of the day!</h1>
+<h1>Chess puzzle of the Week!</h1>
     
     
-    <h2>The Repition of River</h2>
+    <h2>The Dandelion River</h2>
 
 
-    <iframe id="8912991" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8912991"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8912991"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
+    <iframe id="8914931" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8914931"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8914931"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
 
 
 <br>  
