--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -44,6 +44,7 @@
 <div class="navbar">
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/">🏠 Home</a>
   <a class="active" href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/daily_puzzle.html">♟ Daily Chess Puzzle</a>
+  <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/weekly_puzzle.html">🕒 Weekly Chess Puzzle</a>
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html">📁 Archived Puzzles</a>
 </div>
 
