--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -81,7 +81,7 @@
 <h1>Chess puzzle of the day!</h1>
     
     
-    <h2>The Repition of River</h2>
+    <h2>Golden Yet River</h2>
 
 
     <iframe id="8915201" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8915201"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8915201"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
