--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -85,7 +85,7 @@
     <h2>Fischer's Devious Skewer</h2>
 
 
-  <iframe id="8960601" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8960601"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8960601"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
+  <iframe id="8960601" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=8960601"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8960601"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
     
 
 <br>  
