--- a/weekly_puzzle.html
+++ b/weekly_puzzle.html
@@ -81,7 +81,7 @@
     <h2>Queen + Helper Mate</h2>
 
 
-   <iframe id="8960629" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8960629"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8960629"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
+   <iframe id="8960629" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=8960629"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8960629"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
     
     
 <br>  
