--- a/monthly_puzzle.html
+++ b/monthly_puzzle.html
@@ -81,7 +81,7 @@
     <h2>Lair Yet Blue</h2>
 
 
-    <iframe id="8915067" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=8915067"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8915067"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
+    <iframe id="8915067" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=8915067"></iframe><script>window.addEventListener("message",e=>{e['data']&&"8915067"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
     
     
 <br>  
