--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -55,7 +55,7 @@
   <div>
   
   
-<button onclick="topFunction()" id="myBtn" title="⬆">Top</button>
+<button onclick="topFunction()" id="myBtn" title="Top">⬆</button>
 
 
 <script>
