--- a/monthly_puzzle.html
+++ b/monthly_puzzle.html
@@ -51,7 +51,7 @@
 </div>
   
   
-<button onclick="topFunction()" id="myBtn" title="⬆">Top</button>
+<button onclick="topFunction()" id="myBtn" title="Top">⬆</button>
 
 
 <script>
