--- a/weekly_puzzle.html
+++ b/weekly_puzzle.html
@@ -9,8 +9,8 @@
 
 <head>
   
-  
-<link rel="icon" type="image/gif" href="ezgif.com-gif-maker.gif">
+
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
 <meta charset="UTF-8">
