--- a/monthly_puzzle.html
+++ b/monthly_puzzle.html
@@ -10,7 +10,7 @@
 <head>
   
   
-<link rel="icon" type="image/gif" href="ezgif.com-gif-maker.gif">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
 <meta charset="UTF-8">
