--- a/puzzle_archive.html
+++ b/puzzle_archive.html
@@ -11,6 +11,9 @@
   
   
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  
+  
+  <link rel="manifest" href="manifest.json">
 
 
 <meta charset="UTF-8">
