--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -43,6 +43,14 @@
 <body>
   
   
+  <div class="header">
+    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles"><img src="Drawing.sketchpad (6).png" />
+      <h3>No acounts are needed!</h3>
+      <a href="https://github.com/EggOfGlory999/Free-Daily-Chess-Puzzles/releases/tag/Releases" target="_blank"><img src="button_download-fdcp-release.png" /></a>
+      <b>FOR COMPUTERS ONLY!</b>
+      </div>
+  
+  
 
 <div class="navbar">
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/">🏠 Home</a>
@@ -52,10 +60,6 @@
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html">📁 Archived Puzzles</a>
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/information.html">⚠ Information</a>
 </div>
-
-
-
-  <div>
   
   
 <button onclick="topFunction()" id="myBtn" title="Top">⬆</button>
