--- a/monthly_puzzle.html
+++ b/monthly_puzzle.html
@@ -54,6 +54,17 @@
 </div>
   
   
+   <div class="header">
+    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles"><img src="Drawing.sketchpad (6).png"/></a>
+    <br>
+      <h3>No acounts are needed!</h3>
+    <br>
+      <a href="https://github.com/EggOfGlory999/Free-Daily-Chess-Puzzles/releases/tag/Releases" target="_blank"><img src="button_download-fdcp-release.png" /></a>
+    <br>
+      <b>FOR COMPUTERS ONLY!</b>
+      </div>
+  
+  
 <button onclick="topFunction()" id="myBtn" title="Top">⬆</button>
 
 
