--- a/puzzle_archive.html
+++ b/puzzle_archive.html
@@ -51,6 +51,17 @@
   <a class="active" href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html">📁 Archived Puzzles</a>
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/information.html">⚠ Information</a>
 </div>
+    
+    
+     <div class="header">
+    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles"><img src="Drawing.sketchpad (6).png"/></a>
+    <br>
+      <h3>No acounts are needed!</h3>
+    <br>
+      <a href="https://github.com/EggOfGlory999/Free-Daily-Chess-Puzzles/releases/tag/Releases" target="_blank"><img src="button_download-fdcp-release.png" /></a>
+    <br>
+      <b>FOR COMPUTERS ONLY!</b>
+      </div>
   
   
 <button onclick="topFunction()" id="myBtn" title="Top">⬆</button>
