--- a/monthly_puzzle.html
+++ b/monthly_puzzle.html
@@ -55,7 +55,7 @@
   
   
    <div class="header">
-    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles"><img src="Drawing.sketchpad (6).png"/></a>
+    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles" style="text-align:center"><img src="Drawing.sketchpad (6).png"/></a>
     <br>
       <h3>No acounts are needed!</h3>
     <br>
