--- a/puzzle_archive.html
+++ b/puzzle_archive.html
@@ -54,11 +54,11 @@
     
     
      <div class="header">
-    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles"><img src="Drawing.sketchpad (6).png"/></a>
+    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles" style="text-align:center"><img src="Drawing.sketchpad (6).png"/></a>
     <br>
       <h3>No acounts are needed!</h3>
     <br>
-      <a href="https://github.com/EggOfGlory999/Free-Daily-Chess-Puzzles/releases/tag/Releases" target="_blank"><img src="button_download-fdcp-release.png" /></a>
+      <a href="https://github.com/EggOfGlory999/Free-Daily-Chess-Puzzles/releases/tag/Releases" target="_blank" style="text-align:center"><img src="button_download-fdcp-release.png" /></a>
     <br>
       <b>FOR COMPUTERS ONLY!</b>
       </div>
