--- a/monthly_puzzle.html
+++ b/monthly_puzzle.html
@@ -64,7 +64,7 @@
     <br>
       <h3>No acounts are needed!</h3>
     <br>
-      <a href="https://github.com/EggOfGlory999/Free-Daily-Chess-Puzzles/releases/tag/Releases" target="_blank" ><style="text-align:center"img src="button_download-fdcp-release.png" /></a>
+      <a href="https://github.com/EggOfGlory999/Free-Daily-Chess-Puzzles/releases/tag/Releases" target="_blank" style="text-align:center"><img src="button_download-fdcp-release.png"/></a>
     <br>
       <b>FOR COMPUTERS ONLY!</b>
       </div>
