--- a/weekly_puzzle.html
+++ b/weekly_puzzle.html
@@ -10,7 +10,7 @@
 <head>
   
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   
   
   <link rel="manifest" href="manifest.json">
