--- a/puzzle_archive.html
+++ b/puzzle_archive.html
@@ -10,7 +10,7 @@
 <head>
   
   
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.png">
   
   
   <link rel="manifest" href="manifest.json">
