--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -43,6 +43,12 @@
 <body>
   
   
+  
+   <div class="header">
+    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles"><img src="Drawing.png"/></a>
+      </div>
+  
+  
 
 <div class="navbar">
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/">🏠 Home</a>
@@ -59,16 +65,12 @@
   
   <br>
   
-   <div class="header">
-    <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles" style="text-align:center"><img src="Drawing.sketchpad (6).png"/></a>
-    <br>
+      <br>
       <h3>No acounts are needed!</h3>
     <br>
       <a href="https://github.com/EggOfGlory999/Free-Daily-Chess-Puzzles/releases/tag/Releases" target="_blank" style="text-align:center"><img src="button_download-fdcp-release.png" /></a>
     <br>
       <b>FOR COMPUTERS ONLY!</b>
-      </div>
-  
   
 <button onclick="topFunction()" id="myBtn" title="Top">⬆</button>
 
