--- a/information.html
+++ b/information.html
@@ -58,11 +58,11 @@
 
 <div class="navbar">
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/">🏠 Home</a>
-  <a class="active" href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/daily_puzzle.html">♟ Daily Chess Puzzle</a>
+  <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/daily_puzzle.html">♟ Daily Chess Puzzle</a>
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/weekly_puzzle.html">🕒 Weekly Chess Puzzle</a>
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/monthly_puzzle.html">🗓 Monthly Chess Puzzle</a>
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/puzzle_archive.html">📁 Archived Puzzles</a>
-  <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/information.html">⚠ Information</a>
+  <a class="active" href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/information.html">⚠ Information</a>
 </div>
   
   
