--- a/offline.html
+++ b/offline.html
@@ -30,7 +30,7 @@
       <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles"><img src="Drawing.png"/></a>
     </div>
     
-    <img src="offline.png" align="center"/>
+    <img src="offline.png" style="vertical-align:center;horizontal-align:center"/>
     
     <h1>Uh oh!</h1>
     <br>
