--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -13,7 +13,7 @@
 <link rel="icon" type="image/x-icon" href="favicon.png">
   
   
-<link rel="manifest" href="manifest.json">
+<link rel="manifest" href="https://eggofglory999.github.io/manifest.json">
 
 
 <meta charset="UTF-8">
