--- a/monthly_puzzle.html
+++ b/monthly_puzzle.html
@@ -78,6 +78,10 @@
 </script>
   
   
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-0f200ded-9114-4658-94d2-822e62b8581b"></div>
+  
+  
   <hr>
 
 
