--- a/puzzle_archive.html
+++ b/puzzle_archive.html
@@ -27,15 +27,6 @@
   
 <link rel="stylesheet" href="style.css">
 
-
-<style>
-
-
-#myBtn { display: none; /* Hidden by default */ position: fixed; /* Fixed/sticky position */ bottom: 20px; /* Place the button at the bottom of the page */ right: 30px; /* Place the button 30px from the right */ z-index: 99; /* Make sure it does not overlap */ border: none; /* Remove borders */ outline: none; /* Remove outline */ background-color: red; /* Set a background color */ color: white; /* Text color */ cursor: pointer; /* Add a mouse pointer on hover */ padding: 15px; /* Some padding */ border-radius: 10px; /* Rounded corners */ font-size: 18px; /* Increase font size */ } #myBtn:hover { background-color: #555; /* Add a dark-grey background on hover */ }
-
-
-</style>
-
   
 </head>
   
@@ -66,16 +57,8 @@
 </div>
   
   
-<button onclick="topFunction()" id="myBtn" title="Top">⬆</button>
-
-
-<script>
-
-
-//Get the button: mybutton = document.getElementById("myBtn"); // When the user scrolls down 20px from the top of the document, show the button window.onscroll = function() {scrollFunction()}; function scrollFunction() { if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) { mybutton.style.display = "block"; } else { mybutton.style.display = "none"; } } // When the user clicks on the button, scroll to the top of the document function topFunction() { document.body.scrollTop = 0; // For Safari document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera }
-
-
-</script>
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-4952d659-4ad8-4807-aab6-635b0a368630"></div>
     
     
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
