--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -62,6 +62,10 @@
   
   <br>
   
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-40434d3c-c429-4b6a-b9b7-58f62267e42d"></div>
+  
+  
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-4952d659-4ad8-4807-aab6-635b0a368630"></div>
   
