--- a/information.html
+++ b/information.html
@@ -65,6 +65,10 @@
 <div class="elfsight-app-0f200ded-9114-4658-94d2-822e62b8581b"></div>
   
   
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-40434d3c-c429-4b6a-b9b7-58f62267e42d"></div>
+  
+  
   <hr>
 
 
