--- a/daily_puzzle.html
+++ b/daily_puzzle.html
@@ -61,9 +61,13 @@
   <br>
   
   <br>
+
+
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-8a4c082d-2c9a-494a-9214-df25e9c68762"></div>
   
   
-<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-4952d659-4ad8-4807-aab6-635b0a368630"></div>
   
   
