--- a/information.html
+++ b/information.html
@@ -56,6 +56,8 @@
   <a class="active" href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/information.html">⚠ Information</a>
 </div>
   
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-8a4c082d-2c9a-494a-9214-df25e9c68762"></div>
   
   <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-0f200ded-9114-4658-94d2-822e62b8581b"></div>
