--- a/weekly_puzzle.html
+++ b/weekly_puzzle.html
@@ -56,8 +56,11 @@
   <a href="https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/information.html">⚠ Information</a>
 </div>
   
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-8a4c082d-2c9a-494a-9214-df25e9c68762"></div>
+
   
-<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-4952d659-4ad8-4807-aab6-635b0a368630"></div>
   
   
